--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Activity.main.MainActivity">
+        tools:context=".activity.main.MainActivity">
 
-    <ProgressBar android:layout_width="80dp"
-                 android:layout_height="80dp"
-                 android:id="@+id/mainProgBar"
-                 android:layout_centerInParent="true"/>
-    <android.support.v7.widget.RecyclerView
+    <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/mainProgBar"
+            android:layout_centerInParent="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFootBall"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="?attr/actionBarSize"
+            tools:listitem="@layout/layout_match_item"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/menuBottom"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/menuBottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/rvFootball"
-            tools:listitem="@layout/match_item"/>
-
-        <FrameLayout
-                android:id="@+id/main_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/bottom_layout"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            android:background="#fff"
+            app:menu="@menu/bottom_navigation"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-        <android.support.design.widget.CoordinatorLayout
-                android:id="@+id/bottom_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="vertical">
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:background="@color/colorAccent"/>
-            <android.support.design.widget.BottomNavigationView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/bottom_navigation"
-                    app:itemBackground="@android:color/white"
-            app:itemIconTint="@color/colorAccent"
-            app:itemTextColor="@color/colorAccent"
-            app:menu="@menu/bottom_navigation"/>
-
-
-        </android.support.design.widget.CoordinatorLayout>
-
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
