--- a/app/src/main/res/layout/layout_match_item.xml
+++ b/app/src/main/res/layout/layout_match_item.xml
@@ -23,7 +23,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     tools:text="28 Oktober 2018"
-                    android:textSize="14sp"
+                    android:textSize="12sp"
                     android:textColor="@color/colorAccent"
                     android:gravity="center"/>
 
@@ -31,28 +31,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                <androidx.appcompat.widget.LinearLayoutCompat
+                <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/txtHome"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/img_home"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:padding="4dp"
-                            android:layout_marginRight="2dp"/>
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/txtHome"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_horizontal"
-                            tools:text="Arsenal FC"
-                            android:textSize="14sp"
-                            android:gravity="center"/>
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal"
+                        tools:text="Arsenal FC"
+                        android:textSize="14sp"
+                        android:gravity="center"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/txtScore"
@@ -65,28 +52,15 @@
                         android:textStyle="bold"
                         android:gravity="center"/>
 
-                <androidx.appcompat.widget.LinearLayoutCompat
+                <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/txtAway"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/img_away"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:padding="4dp"
-                            android:layout_marginRight="2dp"/>
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/txtAway"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_horizontal"
-                            tools:text="Arsenal FC"
-                            android:textSize="14sp"
-                            android:gravity="center"/>
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal"
+                        tools:text="Arsenal FC"
+                        android:textSize="14sp"
+                        android:gravity="center"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
